--- a/settings.ini
+++ b/settings.ini
@@ -6,13 +6,13 @@ proxyport =
 
 #ssh acount setting is required .
 [ssh]
-host = 51.75.160.76
-port = 80
-username = pepsi
-password = pepsi
+host = paste host or ssh ip 
+port = paste her port 
+username = paste the username
+password = paste password
 
 [sni]
-# sni bughost
+# sni bughost ex : facebook.com
 server_name = facebook.com   
 
 
