--- a/settings.ini
+++ b/settings.ini
@@ -7,7 +7,7 @@ proxyport =
 #ssh acount setting is required .
 [ssh]
 host = paste host or ssh ip 
-port = paste her port 
+port = paste here port 
 username = paste the username
 password = paste password
 
