--- a/settings.ini
+++ b/settings.ini
@@ -3,6 +3,7 @@ payload = CONNECT [host_port] [protocol][crlf][crlf]
 # put proxy if needed else let it empty
 proxyip = 
 proxyport = 
+auto_replace = 0
 
 #ssh acount setting is required .
 [ssh]
