--- a/redsocks.conf
+++ b/redsocks.conf
@@ -33,15 +33,17 @@ redsocks {
 }
 
 redudp {
-    local_ip = "127.0.0.1"; 
-    local_port = "8123";
-    ip = "192.168.1.1"; port = "1080";
-    dest_ip = "8.8.8.8"; dest_port = "53"; 
+    local_ip = 0.0.0.0; 
+    local_port = 8123;
+    ip = 192.168.1.1; 
+    port = 1080;
+    dest_ip = 8.8.8.8; dest_port = 53; 
 }
 redudp {
-    local_ip = "127.0.0.1"; local_port = "8124";
+    local_ip = 0.0.0.0;
+    local_port = 8124;
     ip = 192.168.1.1; 
-    port = "1080";
+    port = 1080;
     dest_ip = 8.8.8.8;
     dest_port = 53; 
 }
