--- a/redsocks.conf
+++ b/redsocks.conf
@@ -21,7 +21,7 @@ redsocks {
 }
 redsocks {
 	
-	local_ip = 0.0.0.0;
+	local_ip = 127.0.0.1;
 	local_port = 8124;
 
 	ip = 127.0.0.1;
@@ -33,17 +33,28 @@ redsocks {
 }
 
 redudp {
-    local_ip = 0.0.0.0; 
-    local_port = 8123;
+    local_ip = 127.0.0.1; 
+    local_port = 8125;
     ip = 127.0.0.1; 
     port = 1080;
     dest_ip = 8.8.8.8; dest_port = 53; 
+    udp_timeout = 30;
+    udp_timeout_stream = 180;
 }
 redudp {
-    local_ip = 0.0.0.0;
-    local_port = 8124;
+    local_ip = 127.0.0.1;
+    local_port = 8126;
     ip = 127.0.0.1; 
     port = 1080;
     dest_ip = 8.8.8.8;
-    dest_port = 53; 
+    dest_port = 53;
+    udp_timeout = 30;
+    udp_timeout_stream = 180;
+}
+dnstc {
+	// fake and really dumb DNS server that returns "truncated answer" to
+	// every query via UDP, RFC-compliant resolver should repeat same query
+	// via TCP in this case.
+	local_ip = 127.0.0.1;
+	local_port = 5300;
 }
