--- a/settings.ini
+++ b/settings.ini
@@ -1,8 +1,13 @@
+[mode]
+
+connection_mode = 0
+
 [config]
 payload = CONNECT [host_port] [protocol][crlf][crlf]
 # put proxy if needed else let it empty
 proxyip = 
 proxyport = 
+
 auto_replace = 0
 
 #ssh acount setting is required .
