--- a/settings.ini
+++ b/settings.ini
@@ -10,11 +10,11 @@ proxyport =
 
 #ssh acount setting is required .
 [ssh]
-host = paste host or ssh ip 
-port = paste here port 
-username = paste the username
-password = paste password
+host = 
+port = 
+username = 
+password = 
 
 [sni]
 # sni bughost ex : facebook.com
-server_name = facebook.com   
+server_name = 
