--- a/settings.ini
+++ b/settings.ini
@@ -1,20 +1,20 @@
 [mode]
 
-connection_mode = 0
+connection_mode = 1
 
 [config]
-payload = CONNECT [host_port] [protocol][crlf][crlf]
+payload = GET http://esim.flexiroam.com HTTP/1.1[crlf]\r\nContent-Length: 9999999999999999999999999999999999999[crlf]\nHost: esim.flexiroam.com[crlf]\nConnection: Close[crlf][crlf]
 # put proxy if needed else let it empty
 proxyip = 
 proxyport = 
 
 #ssh acount setting is required .
 [ssh]
-host = 
-port = 
-username = 
-password = 
-
+host = flexiroam.com.orangedns.site
+port = 80
+username = abdox
+password = 12345
+enable_compression = y
 [sni]
 # sni bughost ex : facebook.com
-server_name = 
+server_name = docs.flexiroam.com
