--- a/settings.ini
+++ b/settings.ini
@@ -3,18 +3,18 @@
 connection_mode = 1
 
 [config]
-payload = GET http://esim.flexiroam.com HTTP/1.1[crlf]\r\nContent-Length: 9999999999999999999999999999999999999[crlf]\nHost: esim.flexiroam.com[crlf]\nConnection: Close[crlf][crlf]
+payload = GET / HTTP/1.1[crlf]\r\nContent-Length: 9999999999999999999999999999999999999[crlf]\nHost: mhost[crlf]\nConnection: Close[crlf][crlf]
 # put proxy if needed else let it empty
 proxyip = 
 proxyport = 
 
 #ssh acount setting is required .
 [ssh]
-host = flexiroam.com.orangedns.site
-port = 80
-username = abdox
-password = 12345
-enable_compression = y
+host = 
+port = 
+username = 
+password = 
+enable_compression = n
 [sni]
 # sni bughost ex : facebook.com
-server_name = docs.flexiroam.com
+server_name = 
