--- a/redsocks.conf
+++ b/redsocks.conf
@@ -30,3 +30,21 @@ redsocks {
 
 	
 }
+
+redudp {
+    local_ip = 127.0.0.1; 
+    local_port = 7300;
+    ip = 10.0.0.1;
+    port = 1080;
+    dest_ip = 8.8.8.8; dest_port = 53; 
+    udp_timeout = 30;
+    udp_timeout_stream = 180;
+}
+dnstc {
+	// fake and really dumb DNS server that returns "truncated answer" to
+	// every query via UDP, RFC-compliant resolver should repeat same query
+	// via TCP in this case.
+	local_ip = 127.0.0.1;
+	local_port = 5300;
+}
+
