--- a/redsocks.conf
+++ b/redsocks.conf
@@ -18,27 +18,31 @@ redsocks {
 
 	
 }
-redsocks {
+redudp {
 	
 	local_ip = 127.0.0.1;
-	local_port = 8124;
+	local_port = 7300;
 
 	ip = 10.0.0.1;
 	port = 1080;
-
-	type = socks5;
-
 	
-}
+	dest_ip = 8.8.8.8;
+	dest_port = 53;
 
-redudp {
-    local_ip = 127.0.0.1; 
-    local_port = 7300;
-    ip = 10.0.0.1;
-    port = 1080;
-    dest_ip = 8.8.8.8; dest_port = 53; 
-    udp_timeout = 30;
-    udp_timeout_stream = 180;
+	udp_timeout = 30;
+	udp_timeout_stream = 180;
+}
+dnsu2t {
+	local_ip = 127.0.0.1;
+	local_port = 5313;
+	remote_ip = 8.8.4.4;
+	remote_port = 53;
+}
+dnsu2t {
+	local_ip = 127.0.0.1;
+	local_port = 5314;
+	remote_ip = 8.8.8.8;
+	remote_port = 53;
 }
 dnstc {
 	// fake and really dumb DNS server that returns "truncated answer" to
@@ -47,4 +51,3 @@ dnstc {
 	local_ip = 127.0.0.1;
 	local_port = 5300;
 }
-
