--- a/redsocks.conf
+++ b/redsocks.conf
@@ -18,6 +18,17 @@ redsocks {
 
 	
 }
+redsocks {
+        local_ip = 0.0.0.0;
+
+	local_port = 8124;
+
+	ip = 127.0.0.1;
+
+	port = 1080;
+
+	type = socks5;
+		
 redudp {
 	
 	local_ip = 127.0.0.1;
