--- a/settings.ini
+++ b/settings.ini
@@ -1,20 +1,30 @@
 [mode]
+# mode 0 : ssh direct
+# mode 1 : payload with or without proxy
+# mode 2 :  ssl/tls (sni)
+# mode 3 : payload + sni 
+
+# choose your mode 
 
 connection_mode = 1
 
 [config]
-payload = GET / HTTP/1.1[crlf]\r\nContent-Length: 9999999999999999999999999999999999999[crlf]\nHost: mhost[crlf]\nConnection: Close[crlf][crlf]
-# put proxy if needed else let it empty
-proxyip = 
-proxyport = 
+# websocket cdn sample payload (changeable)
+payload = GET / HTTP/1.1[crlf]Host: [host][crlf]Connection: Upgrade[crlf]User-Agent: [ua][crlf]Upgrade: websocket[crlf][crlf]
 
-#ssh acount setting is required .
+# put proxy if needed else let it empty
+proxyip = proxy.example.com
+proxyport = 8080
+
+
+# ssh acount setting is required .
 [ssh]
-host = 
-port = 
-username = 
-password = 
-enable_compression = n
+host = ssh.host.or.ip.com
+port = 80
+username = sshuser
+
+password = sshpass
+
 [sni]
-# sni bughost ex : facebook.com
-server_name = 
+# sni bughost 
+server_name = sni.example.com
