--- a/vpn/redsocks.conf
+++ b/vpn/redsocks.conf
@@ -1,1 +1,21 @@
+base {
+
+	log_debug = off;
+	log_info = on;
+	
+	redirector = iptables;
+
+}
+redsocks {
+	
+	local_ip = 0.0.0.0;
+	local_port = 8123;
+
+	ip = 127.0.0.1;
+	port = 1080;
+
+	type = socks5;
+
+	
+}
 
