--- a/cfgs/settings.ini
+++ b/cfgs/settings.ini
@@ -1,1 +1,32 @@
+[mode]
+# mode 0 : ssh direct
+# mode 1 : payload with or without proxy
+# mode 2 :  ssl/tls (sni)
+# mode 3 : payload + sni 
+
+# choose your mode 
+
+connection_mode = 1
+
+[config]
+# websocket cdn sample payload (changeable)
+payload = 
+
+# put proxy if needed else let it empty
+proxyip = 
+proxyport = 
+
+
+# ssh acount setting is required .
+[ssh]
+host = 
+port = 
+username = 
+password = 
+
+enable_compression = n
+
+[sni]
+# sni bughost 
+server_name = 
 
