--- a/cfgs/settings.ini
+++ b/cfgs/settings.ini
@@ -1,32 +1,22 @@
 [mode]
-# mode 0 : ssh direct
-# mode 1 : payload with or without proxy
-# mode 2 :  ssl/tls (sni)
-# mode 3 : payload + sni 
-
-# choose your mode 
-
 connection_mode = 1
+auto_replace = y
 
 [config]
-# websocket cdn sample payload (changeable)
-payload = 
-
-# put proxy if needed else let it empty
+payload = GET / HTTP/1.1[crlf]Host: [host][crlf]Connection: Upgrade[crlf]User-Agent: [ua][crlf]Upgrade: websocket[crlf][crlf]
 proxyip = 
 proxyport = 
 
-
-# ssh acount setting is required .
 [ssh]
 host = 
 port = 
 username = 
 password = 
-
 enable_compression = n
 
+#authentication method : password | publickey
+auth_methode = password
+
 [sni]
-# sni bughost 
-server_name = 
+server_name =
 
