--- a/cfgs/settings.ini
+++ b/cfgs/settings.ini
@@ -2,7 +2,7 @@
 connection_mode = 1
 auto_replace = y
 
-[config]
+[Payload]
 payload = GET / HTTP/1.1[crlf]Host: [host][crlf]Connection: Upgrade[crlf]User-Agent: [ua][crlf]Upgrade: websocket[crlf][crlf]
 proxyip = 
 proxyport = 
